--- a/styles/recipe-pg.css
+++ b/styles/recipe-pg.css
@@ -1,13 +1,88 @@
 @import url("https://fonts.googleapis.com/css2?family=Young+Serif&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap");
 
-:root{
-    --headings-font-family:"Young Serif", serif;
-    --body-text-font-family:"Outfit", sans-serif;
+:root {
+  --headings-font-family: "Young Serif", serif;
+  --body-text-font-family: "Outfit", sans-serif;
 }
 
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: var(--body-text-font-family);
+  padding: 10px;
+  color: hsl(340, 5%, 35%);
+}
+ 
+img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+h1,
+h2 {
+  font-family: var(--headings-font-family);
+  font-weight: 500;
+}
+h1 {
+  font-size: 2.2rem;
+  color: hsl(24, 5%, 18%);
+  line-height: 1;
+}
+h2{
+    color:hsl(14, 45%, 36%);
+    line-height: 2;
+    font-size: 1.8rem;
+}
+header h1,
+header p {
+  margin: 20px;
+}
+header p {
+  width: 80%;
+}
+section {
+  margin: 20px;
+}
+.prep-time {
+  background-color: #fff7fc;
+  padding: 20px;
+  width: 90%;
+  border-radius: 8px;
+ 
+}
+.prep-time h2 {
+  font-size: 1.2rem;
+  color: hsl(332, 51%, 32%);
+  margin-bottom: 10px;
+}
+.prep-time ul,section ul,section ol {
+  margin-left: 30px;
+}
+.prep-time li::marker {
+  color: hsl(332, 51%, 32%);
+}
+
+li::marker{
+    color:hsl(14, 45%, 36%);
+    
+}
+li{
+    margin-bottom:15px;
+   
+}
+.nutrition-section p{
+    width:85%;
+ text-align: justify;
+ line-height: 1.6;
+ margin-bottom: 10px;
+}
+ 
+footer{
+    font-size:11px;
+    text-align: center;
 }
