style rules for larger screens(laptop to desktop)

--- a/styles/recipe-pg.css
+++ b/styles/recipe-pg.css
@@ -16,7 +16,7 @@ body {
   padding: 10px;
   color: hsl(340, 5%, 35%);
 }
- 
+
 img {
   width: 100%;
   height: auto;
@@ -33,10 +33,10 @@ h1 {
   color: hsl(24, 5%, 18%);
   line-height: 1;
 }
-h2{
-    color:hsl(14, 45%, 36%);
-    line-height: 2;
-    font-size: 1.8rem;
+h2 {
+  color: hsl(14, 45%, 36%);
+  line-height: 2;
+  font-size: 1.8rem;
 }
 header h1,
 header p {
@@ -53,36 +53,82 @@ section {
   padding: 20px;
   width: 90%;
   border-radius: 8px;
- 
 }
 .prep-time h2 {
   font-size: 1.2rem;
   color: hsl(332, 51%, 32%);
   margin-bottom: 10px;
 }
-.prep-time ul,section ul,section ol {
+.prep-time ul,
+section ul,
+section ol {
   margin-left: 30px;
 }
 .prep-time li::marker {
   color: hsl(332, 51%, 32%);
 }
 
-li::marker{
-    color:hsl(14, 45%, 36%);
-    
+li::marker {
+  color: hsl(14, 45%, 36%);
 }
-li{
-    margin-bottom:15px;
-   
+li {
+  margin-bottom: 15px;
 }
-.nutrition-section p{
-    width:85%;
- text-align: justify;
- line-height: 1.6;
- margin-bottom: 10px;
+.nutrition-section p {
+  width: 85%;
+  text-align: justify;
+  line-height: 1.6;
+  margin-bottom: 10px;
 }
- 
-footer{
-    font-size:11px;
-    text-align: center;
+table th {
+  color: rgba(82, 76, 78);
+  font-weight: 400;
+}
+table td {
+  color: hsl(14, 45%, 36%);
+  font-weight: 700;
+  margin: 20px;
+}
+/* tr {
+    border-bottom: 1px solid #ddd;
+  } */
+table {
+  width: 100%;
+  border-collapse: collapse; /* Ensures borders don't double up */
+}
+
+th,
+td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ccc; /* Adds horizontal dividers */
+}
+
+hr {
+  border: 0.2px solid hsl(30, 18%, 87%);
+  margin-top: 40px;
+}
+footer {
+  font-size: 11px;
+  text-align: center;
+}
+
+@media screen and (min-width: 992px) {
+  body {
+    padding: 10px 0px 10px 10px;
+  }
+  .container {
+    background-color: #f3e5d8;
+    padding: 150px 100px 20px 300px;
+  }
+
+  article {
+    background-color: white;
+    width: 80%;
+    padding: 40px;
+    border-radius: 15px;
+  }
+  img {
+    border-radius: 8px;
+  }
 }
